Updated openapi.json As well as some files that needeed minor editing before establishing new endpoints for the LLM project.
